kubernetes-for-developers/pod-config-env.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: hello-world
  name: hello-world
spec:
  containers:
  - image: fiunchinho/codely-docker:latest
    name: hello-world
    ports:
    - containerPort: 80
    resources: {}
    #Define the environment variables
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
