kubernetes-for-developers/pod-secret-envFrom.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: hello-world
  name: hello-world
    #Define the environment variables
  spec:
    containers:
    - image: fiunchinho/codely-docker:latest
      name: hello-world
      ports:
      - containerPort: 80
      resources: {}
    # All keys from test-secret will be passed as environment variables
    # In this case, the name of the env will be the one stored in the secret
  restartPolicy: Never
status: {}
