kubernetes-for-developers/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world
spec:
  rules:
  - host: codely-k8s.com
    http:
      paths:
      - path:
        backend:
          serviceName: hello-world
          servicePort: 80
